[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/Levels/Gateway/CopySigmaWall.gd" type="Script" id=1]
[ext_resource path="res://src/Actors/NewStateMachine/audioplayer.gd" type="Script" id=2]
[ext_resource path="res://src/Effects/Materials/copysigma_door_particles.tres" type="Material" id=3]
[ext_resource path="res://src/Effects/Textures/smoke.png" type="Texture" id=4]
[ext_resource path="res://src/Levels/Gateway/sigma_door.png" type="Texture" id=5]
[ext_resource path="res://src/Effects/Materials/mat_smokeparticle.tres" type="Material" id=6]
[ext_resource path="res://src/Sounds/Yeti - Stomp.ogg" type="AudioStream" id=7]
[ext_resource path="res://src/Sounds/Antonion - Burrow.ogg" type="AudioStream" id=8]

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 0 ), 0.0, 1.0, 0, 1, Vector2( 1, 1 ), 1.0, 0.0, 1, 0 ]

[sub_resource type="CurveTexture" id=44]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=212]
lifetime_randomness = 0.5
emission_shape = 2
emission_box_extents = Vector3( 16, 1, 1 )
flag_disable_z = true
direction = Vector3( -1, -0.5, 0 )
spread = 32.34
gravity = Vector3( 0, 0, 0 )
initial_velocity = 315.46
initial_velocity_random = 0.3
orbit_velocity = -0.1
orbit_velocity_random = 0.49
linear_accel = 155.0
damping = 500.0
damping_random = 0.2
anim_speed = 1.0
anim_speed_random = 0.19
anim_speed_curve = SubResource( 44 )

[sub_resource type="RectangleShape2D" id=211]
extents = Vector2( 40, 48 )

[node name="CopySigmaWall" type="Node2D"]
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 0, 49 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, 0, 82, 97 )

[node name="smoke" type="Particles2D" parent="."]
material = ExtResource( 6 )
position = Vector2( -29, 0 )
z_index = 1
amount = 6
lifetime = 0.75
local_coords = false
process_material = ExtResource( 3 )
texture = ExtResource( 4 )

[node name="smoke2" type="Particles2D" parent="."]
material = ExtResource( 6 )
position = Vector2( -35, 96 )
z_index = 1
emitting = false
amount = 11
one_shot = true
explosiveness = 0.96
local_coords = false
process_material = SubResource( 212 )
texture = ExtResource( 4 )

[node name="staticBody2D" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="collisionShape2D" type="CollisionShape2D" parent="staticBody2D"]
position = Vector2( 0, 48 )
shape = SubResource( 211 )
disabled = true

[node name="rise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -2.0
pitch_scale = 0.8
max_distance = 600.0
bus = "SFX"
script = ExtResource( 2 )

[node name="close" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -5.0
pitch_scale = 0.8
max_distance = 600.0
bus = "SFX"
script = ExtResource( 2 )
